# Z-CPP

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflow/: build.yml
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: compile.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/services/: api.ts
scripts/: gen-release-body.py  start.bat  start.sh
scripts/installer/linux/: build-deb.sh  build-rpm.sh  z-cpp.desktop
scripts/installer/linux/DEBIAN/: control  postinst  prerm
scripts/installer/windows/: setup.nsi
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compile.rs  lib.rs  main.rs  models.rs
workspace/: main.cpp
