[package]
name = "z-cpp"
version = "0.1.0"
description = "Z-CPP 轻量级 C/C++ IDE 桌面应用"
authors = ["cn-ywcw"]
edition = "2021"
license = "MIT"

[lib]
name = "z_cpp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
font-kit = "0.14"
